[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/effect/level_windy_leaf_particle.gd" type="Script" id=1]
[ext_resource path="res://art/kenney_world_sprites/kenneynl_abstract-platformer-370-assets_plantTop_leaves.png" type="Texture" id=2]

[node name="LeafSprite" type="Sprite"]
modulate = Color( 1, 1, 1, 0.784314 )
scale = Vector2( 0.25, 0.25 )
z_index = 4000
z_as_relative = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( 15, 0 )
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 50, 20 )

[node name="FailsafeTimer" type="Timer" parent="."]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="FailsafeTimer" to="." method="_on_FailsafeTimer_timeout"]
